Signed-off-by: luckelectricity <luckelectricity@outlook.com>更改了文字颜色，让文字在无背景的情况下显示，以前是白色有背景的，好像不知道背景去哪里了。

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         	<p class="ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="0.8s" swiper-animate-delay="0.8s">相约江湖，共存发展，有何不可？</p>
         	<p class="ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="0.8s" swiper-animate-delay="1.3s">让我们携手，向着共同的征途！</p>
         	<p class="ani" swiper-animate-effect="zoomIn" swiper-animate-duration="1s" swiper-animate-delay="2.3s">WE WANT YOU!</p>
-        	<p class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="3.3s">请将资料发至：shuiguojianghu@upgo1.com</p>
+        	<p class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="3.3s">请将资料发至：luckelectricity@outlook.com</p>
         	<img class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="4s" src="img/15.jpg"/>
         	<img class="ani" swiper-animate-effect="rotateIn" swiper-animate-duration="1s" swiper-animate-delay="5s" src="img/4.png"/>
         </div>
